# Watchlist

./: .gitignore  CMakeLists.txt  README.md  dialog.cpp  dialog.h  dialog.ui  localdatabse.cpp  localdatabse.h  main.cpp  moviedelegate.cpp  moviedelegate.h  moviemodel.cpp  moviemodel.h  resources.qrc  serverdata.cpp  serverdata.h  watchlist.cpp  watchlist.h  watchlist.ui  watchlist_data_v0.1.db  watchlistdelegate.cpp  watchlistdelegate.h
